VeraSandBox2016/src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>AW_Acc_Mech__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about Accountability Mechanisms</inlineHelpText>
        <label>AW Acc Mech</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_COMP__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about Complementarity</inlineHelpText>
        <label>AW COMP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_CVIC__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about CVIC</inlineHelpText>
        <label>AW CVIC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_FIAR__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about FIAR</inlineHelpText>
        <label>AW FIAR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_FOR__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about Forensics</inlineHelpText>
        <label>AW FOR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_FR__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about Mentoring First Responders</inlineHelpText>
        <label>AW FR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_JRR__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about JRR</inlineHelpText>
        <label>AW JRR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_SGBV__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about SGBV</inlineHelpText>
        <label>AW SGBV</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_Standards__c</fullName>
        <inlineHelpText>Event allowed to raise awareness about Standards</inlineHelpText>
        <label>AW Standards</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact person for the event</inlineHelpText>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Events_OR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <picklist>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_up_Actions__c</fullName>
        <label>F-up Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F_up_Deadline__c</fullName>
        <label>F-up Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Usefulness__c</fullName>
        <inlineHelpText>1= Very Poor
2= Poor
3= OK
4= Good
5= Very Good</inlineHelpText>
        <label>General Usefulness</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Host_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events_OR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invited_By__c</fullName>
        <inlineHelpText>Please insert &quot;N/A&quot; if JRR is the host, &quot;Host&quot; if invited by the host or type the name of the account if invited by another party (thank you for looking up the account name and typing it accordingly)</inlineHelpText>
        <label>Invited By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JRRID__c</fullName>
        <displayFormat>EVT-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>JRR_Invited__c</fullName>
        <label>JRR Invited</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_Off_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JRR Off 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events_OR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JRR_Off_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JRR Off 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events_OR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned_Details__c</fullName>
        <label>Lessons Learned Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned__c</fullName>
        <label>Lessons Learned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MENA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MENA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Audience__c</fullName>
        <label>Main Audience</label>
        <picklist>
            <picklistValues>
                <fullName>STA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO-CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Contacts__c</fullName>
        <label>New Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Information__c</fullName>
        <label>New Information</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Raised_Awareness_Details__c</fullName>
        <label>Raised Awareness Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SGBV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SGBV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TB_Repeated__c</fullName>
        <inlineHelpText>To Be Repeated</inlineHelpText>
        <label>TB Repeated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2011_Syria_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2011 Syria Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Iraq_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 Iraq Conflict</label>
        <type>Checkbox</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>NAME</columns>
        <columns>Main_Audience__c</columns>
        <columns>Event_Website__c</columns>
        <columns>Host_Account__c</columns>
        <columns>Contact_Person__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Training__c</columns>
        <columns>Missions__c</columns>
        <columns>Funding__c</columns>
        <columns>JRR_Off_1__c</columns>
        <columns>F_up__c</columns>
        <columns>F_up_Deadline__c</columns>
        <columns>General_Usefulness__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>